--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "TheGambler",
+    "name": "GamblerTrader",
     "version": "0.2.4",
     "sptVersion": "~3.9",
     "loadBefore": [],
